# PROJECT_NAME

./: CMakeLists.txt
SDL2_image/: CMakeLists.txt
scripts/: Avatar.cpp  Avatar.h  Background.cpp  Background.h  Game.cpp  Game.h  Hazard.cpp  Hazard.h  Menu.cpp  Menu.h  MenuOption.cpp  MenuOption.h  UI.cpp  UI.h  main.cpp
